tests/invalid/transitive_import_class.err_exp
transitive_import_class.m:022: In clause for function `semidet_id'/1:
transitive_import_class.m:022:   in function result term of clause head:
transitive_import_class.m:022:   error: [38;5;203mundefined[39;49m symbol
transitive_import_class.m:022:   [38;5;87m`transitive_import_class_helper_2.to_int'/1.[39;49m
transitive_import_class.m:022:   [38;5;226m(The module `transitive_import_class_helper_2'[39;49m
transitive_import_class.m:022:   [38;5;226mhas not been imported.)[39;49m
transitive_import_class.m:023: In clause for function `semidet_id'/1:
transitive_import_class.m:023:   in function result term of clause head:
transitive_import_class.m:023:   in argument 1 of functor
transitive_import_class.m:023:   `transitive_import_class_helper_2.to_int/1':
transitive_import_class.m:023:   error: [38;5;203mundefined[39;49m symbol
transitive_import_class.m:023:   [38;5;87m`transitive_import_class_helper_2.from_int'/1.[39;49m
transitive_import_class.m:023:   [38;5;226m(The module `transitive_import_class_helper_2'[39;49m
transitive_import_class.m:023:   [38;5;226mhas not been imported.)[39;49m
